# ansible-collection-util

./: .ansible-lint  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .renovaterc.json  .taplo.toml  CHANGELOG.md  LICENSE  Makefile  README.md  Vagrantfile  ansible.cfg  cliff.toml  galaxy.yml  inventory.toml  pyproject.toml  requirements.yml
.github/: changed-files.yml  file-filters.yml
.github/workflows/: main.yml
molecule/playbooks/: converge.yml  prepare-systemctl.yml  prepare-systemd.yml
plugins/modules/: copy_or_tpl.py  hello_world.py  linger.py
plugins/tests/molecule/copy_or_tpl/: converge.yml  molecule.yml
plugins/tests/molecule/hello_world/: converge.yml  molecule.yml
plugins/tests/molecule/linger/: converge.yml  molecule.yml
roles/aptup/: README.md
roles/aptup/meta/: argument_specs.yml  main.yml
roles/aptup/molecule/aptup/: converge.yml  molecule.yml
roles/aptup/molecule/aptup_vagrant/: converge.yml  molecule.yml
roles/aptup/tasks/: apt_upgrade.yml  clean.yml  codenames.yml  grub_update.yml  main.yml  next_release.yml  upgrade.yml
roles/aptup/vars/: main.yml
roles/docker/: README.md
roles/docker/files/: bash_profile.sh
roles/docker/handlers/: main.yml
roles/docker/meta/: argument_specs.yml  main.yml
roles/docker/molecule/docker/: converge.yml  molecule.yml
roles/docker/molecule/docker/files/: daemon.json  docker-config.json
roles/docker/molecule/docker/templates/: proxy.conf.j2
roles/docker/molecule/docker_vagrant/: converge.yml  molecule.yml
roles/docker/tasks/: cleanup.yml  configs.yml  install.yml  main.yml  rootfull.yml  rootless.yml  uninstall.yml
roles/docker/vars/: main.yml
roles/docker_compose/: README.md
roles/docker_compose/handlers/: main.yml
roles/docker_compose/meta/: argument_specs.yml  main.yml
roles/docker_compose/molecule/docker_compose/: converge.yml  molecule.yml
roles/docker_compose/molecule/docker_compose/files/: .env  docker-compose.yml
roles/docker_compose/tasks/: deploy.yml  main.yml  remove.yml
roles/docker_compose/vars/: main.yml
roles/reboot/: README.md
roles/reboot/meta/: main.yml
roles/reboot/tasks/: main.yml
roles/system_info/: README.md
roles/system_info/meta/: main.yml
roles/system_info/tasks/: main.yml
roles/wireguard/: README.md
roles/wireguard/handlers/: main.yml
roles/wireguard/meta/: argument_specs.yml  main.yml
roles/wireguard/molecule/wireguard/: converge.yml
roles/wireguard/tasks/: debug.yml  main.yml
roles/wireguard/vars/: main.yml
tests/: test_integration.py
(+3 files in other folders)
